# swift-foundation-icu

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Package.swift  README.md
cmake/modules/: CMakeLists.txt  SwiftFoundationICUConfig.cmake.in
icuSources/: CMakeLists.txt
icuSources/common/: CMakeLists.txt  aaplbfct.cpp  aaplbfct.h  appendable.cpp  bmpset.cpp  bmpset.h  brkeng.cpp  brkeng.h  brkiter.cpp  bytesinkutil.cpp  bytesinkutil.h  bytestream.cpp  bytestrie.cpp  bytestriebuilder.cpp  bytestrieiterator.cpp  caniter.cpp  capi_helper.h  cfbundle.cpp  cfbundle.h  characterproperties.cpp  chariter.cpp  charstr.cpp  charstr.h  charstrmap.h  cmemory.cpp  cmemory.h  cpputils.h  cstr.cpp  cstr.h  cstring.cpp  cstring.h  cwchar.cpp  cwchar.h  dictbe.cpp  dictbe.h  dictionarydata.cpp  dictionarydata.h  dtintrv.cpp  edits.cpp  emojiprops.cpp  (+290 more)
icuSources/i18n/: CMakeLists.txt  alphaindex.cpp  anytrans.cpp  anytrans.h  astro.cpp  astro.h  basictz.cpp  bocsu.cpp  bocsu.h  brktrans.cpp  brktrans.h  buddhcal.cpp  buddhcal.h  calendar.cpp  casetrn.cpp  casetrn.h  cecal.cpp  cecal.h  chnsecal.cpp  chnsecal.h  choicfmt.cpp  coleitr.cpp  coll.cpp  collation.cpp  collation.h  collationbuilder.cpp  collationbuilder.h  collationcompare.cpp  collationcompare.h  collationdata.cpp  collationdata.h  collationdatabuilder.cpp  collationdatabuilder.h  collationdatareader.cpp  collationdatareader.h  collationdatawriter.cpp  collationdatawriter.h  collationfastlatin.cpp  collationfastlatin.h  collationfastlatinbuilder.cpp  (+374 more)
icuSources/include/_foundation_unicode/: alphaindex.h  appendable.h  basictz.h  brkiter.h  bytestream.h  bytestrie.h  bytestriebuilder.h  calendar.h  caniter.h  casemap.h  char16ptr.h  chariter.h  choicfmt.h  coleitr.h  coll.h  compactdecimalformat.h  curramt.h  currpinf.h  currunit.h  datefmt.h  dbbi.h  dcfmtsym.h  decimfmt.h  displayoptions.h  dtfmtsym.h  dtintrv.h  dtitvfmt.h  dtitvinf.h  dtptngen.h  dtrule.h  edits.h  enumset.h  errorcode.h  fieldpos.h  filteredbrk.h  fmtable.h  format.h  formattednumber.h  formattedvalue.h  fpositer.h  (+161 more)
icuSources/io/: CMakeLists.txt  locbund.cpp  locbund.h  sprintf.cpp  sscanf.cpp  ucln_io.cpp  ucln_io.h  ufile.cpp  ufile.h  ufmt_cmn.cpp  ufmt_cmn.h  uprintf.cpp  uprintf.h  uprntf_p.cpp  uscanf.cpp  uscanf.h  uscanf_p.cpp  ustdio.cpp  ustream.cpp
icuSources/stubdata/: stubdata.h
swift/FoundationICU/: FoundationICU.swift
